tests/parser/define-type.1.bad.error
error: Malformed type definition
  --> test:4:0
   |
 4 |  (define-type)
   |  ^^^^^^^^^^^^^ expected body
