tests/parser/define-type.1.bad.coalton
;; BAD: Invalid define type
(package test-package)

(define-type)
